[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fftl"
authors = [{name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk"}]
description = "Generalised FFTLog for integral transforms"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["FFTLog", "integral transform", "Hankel transform",
    "Laplace transform", "Stieltjes transform"]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies = ["numpy"]
dynamic = ["version"]

[project.optional-dependencies]
transforms = ["scipy"]
test = ["pytest", "matplotlib", "jax", "scipy"]
docs = ["sphinx", "furo", "numpydoc", "jax", "scipy", "matplotlib"]

[project.urls]
Home = "https://github.com/ntessore/fftl"
Documentation = "https://fftl.readthedocs.io"
Issues = "https://github.com/ntessore/fftl/issues"

[tool.flit.sdist]
exclude = [".*", "docs"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
testpaths = [
    "fftl",
]
